fix bug on creating new Text Box